--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <label for="base">Base Color</label>
         <input type="color" name="base" value="black">
     </div>
+    <img src="image/vade.jpg">
 </body>
 </html>
