--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <div class="controls">
         <h1>CSS Variables with <span class="js">JS</span></h1>
         <label for="spacing">Spacing</label>
-        <input type="range" name="spacing" min="10" max="20" value="10" data-sizing="px">
+        <input type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
     
         <label for="blur">Blur</label>
         <input type="range" name="blur" min="0" value="10" max="25" >
     
         <label for="base">Base Color</label>
-        <input type="color" name="base" value="black">
+        <input type="color" name="base" value="#1e40af;">
     </div>
     <img src="image/vade.jpg">
+    <script src="app.js"></script>
 </body>
 </html>
